testing node fasta issues

--- a/Old_Scripts/Extract_Max_Frequency_Flu.ipynb
+++ b/Old_Scripts/Extract_Max_Frequency_Flu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +132,12 @@
     "    getNodeSequences(args.gene, args.local_files, args.tree, args.root)\n",
     "    \"\"\"\n",
     "\n",
-    "    args_gene = \"PB2\"\n",
+    "    args_gene = \"PB1\"\n",
     "    #args_gene = \"nuc\"\n",
     "    args_local_files = \"True\"\n",
-    "    args_tree = \"/Users/Carlos/Downloads/h3n2_60y_pb2.json\"\n",
-    "    args_root = \"/Users/Carlos/Downloads/h3n2_60y_pb2_root-sequence_Amino.json\"\n",
+    "    args_tree = \"/Users/Carlos/Desktop/Bedford/esm-selection/Flu_Snakemake_Pipeline/h3n2_Sequences/h3n2_60y_pb1.json\"\n",
+    "    #args_root = \"/Users/Carlos/Downloads/h3n2_60y_pb2_root-sequence_Amino.json\"\n",
+    "    args_root = \"/Users/Carlos/Desktop/Bedford/esm-selection/Flu_Snakemake_Pipeline/root_tree_translated/h3n2_60y_pb1_root-sequence.json\"\n",
     "    #args_root = \"/Users/Carlos/Downloads/h3n2_60y_pb2_root-sequence.json\"\n",
     "\n",
     "    getNodeSequences(args_gene, args_local_files, args_tree, args_root)"
