--- a/Old_Scripts/Extract_Max_Frequency_Flu.ipynb
+++ b/Old_Scripts/Extract_Max_Frequency_Flu.ipynb
@@ -1087,7 +1087,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1101,7 +1101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.22"
   }
  },
  "nbformat": 4,
